--- a/style.css
+++ b/style.css
@@ -1,34 +1,40 @@
-body{
+body {
   font-family: 'Poppins', sans-serif;
   margin: 0px;
 }
 
-h1{
+h1 {
   font-size: 50px;
 }
-p{
-  font-size: 30px;
+ h2{
+  font-size: 40px;
+ }
+
+p {
+  font-size: 25px;
 }
-.orange-color{
+
+.orange-color {
   color: orange;
 }
 
-section{
+.flexible-container {
   display: flex;
   margin-bottom: 100px;
 }
 
-.half-width{
+.half-width {
   width: 50%;
   padding-left: 50px;
-  
+
 }
-.half-width img{
+
+.half-width img {
   width: 100%;
 }
 
- 
-.link-button{
+
+.link-button {
   text-decoration: none;
   background-image: linear-gradient(orange, tomato);
   padding: 10px 40px;
@@ -38,15 +44,40 @@ section{
 
 }
 
-.top-banner{
+.top-banner {
   background-image: url(images/top-banner.png);
   background-repeat: no-repeat;
 
 }
 
-.dream-big{
+.dream-big {
   background-image: url(images/dream-bg.png);
 
   background-repeat: no-repeat;
   background-position: right;
 }
+.experience-area{
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
+.experience-item{
+  width: 40%;
+  margin-right: 5%;
+  margin-left: 5%;
+  padding-left: 20px;
+  box-shadow: 10px 10px 50px gray;
+  border-radius: 15px;
+  }
+
+  #web-developer {
+    border-top: 10px solid palevioletred;}
+
+    #wordpress-developer{
+      border-top: 10px solid orangered;
+    }
+
+  footer p{
+    text-align: center;}
+    
